[project]
name = "visionfusion-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-qdrant>=1.1.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pypdf>=6.12.2",
    "qdrant-client>=1.18.0",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]
