[project]
name = "visionfusion-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "easyocr>=1.7.2",
    "faiss-cpu>=1.13.2",
    "fitz>=0.0.1.dev2",
    "flagembedding>=1.4.0",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.8.1",
]
